--- a/l9.ipynb
+++ b/l9.ipynb
@@ -18,12 +18,33 @@
     "\n",
     "1. Diga cual es la diferencia entre Modelos de Markov y Hidden Markov Models\n",
     "\n",
+    "La principal diferencia entre un Modelo de Markov y un Modelo de Markov Oculto (HMM) es que en el HMM no hay una correspondencia directa entre las observaciones y los estados del modelo. En un HMM, los estados son ocultos y solo las observaciones son visibles (Purdue University, s.f.).\n",
+    "Esto hace que no sea posible determinar de manera directa en qué estado estaba la máquina cuando produjo una determinada observación. En cambio, en un modelo de Markov, los estados son visibles y se puede determinar directamente en qué estado estaba la máquina en un momento dado.\n",
     "\n",
+    "*Purdue University. (s. f.). Markov chains and hidden Markov models. https://www.stat.purdue.edu/~junxie/topic3.pdf*\n",
     "\n",
     "2. Investigue qué son los factorial HMM (Hidden Markov Models)\n",
+    "Estos modelos combinan la estructura de transición de estados de los HMM con las representaciones distribuidas de los CVQ. Esto puede representarse de mejor forma en la siguiente figura:\n",
+    "![ Hidden Markov model & Factorial hidden Markov model](https://github.com/Kojimena/L9-IA/blob/main/mkd.png)\n",
+    "\n",
+    "Cada modelo de Markov subyacente, tiene un estado específico y su propia matriz que determina las probabilidades de transición entre estados. Asimismo en los CVQ cada estado dentro de un modelo es exclusivo.\n",
+    "\n",
+    "Los estados en estos modelos son representados por vectores que principalmente tienen 0's excepto por un solo uno, indicando el estado activo.\n",
+    "*Ghahramani, Z., & Jordan, M. I. (1996). Factorial hidden Markov models (A.I. Memo No. 1561; C.B.C.L. Paper No. 130). Massachusetts Institute of Technology, Artificial Intelligence Laboratory and Center for Biological and Computational Learning, Department of Brain and Cognitive Sciences.*\n",
+    "\n",
     "3. Especifique en sus propias palabras el algoritmo Forward Backward para HMM\n",
+    "\n",
+    "El algoritmo forward-backward se usa para calcular la probabilidad de que un HMM genere una secuencia de observaciones dadas. El algoritmo se divide en dos pasos: el paso forward y el paso backward.\n",
+    "\n",
+    "    En el paso forward se calcula la probabilidad de ver las observaciones hasta un momento específico, dado que el modelo está en un estado particular en un momento dado.\n",
+    "    En el paso backward se calcula la probabilidad de ver las observaciones restantes, dado que el modelo está en un estado particular en un momento dado. \n",
+    "\n",
+    "Con estos dos pasos es posible calcular la probabilidad de que el modelo genere una secuencia de observaciones dada.\n",
+    "\n",
     "4. En el algoritmo de Forward Backward, por qué es necesario el paso de Backward (puede escribir ejemplos\n",
-    "o casos para responder esta pregunta)"
+    "o casos para responder esta pregunta.\n",
+    "\n",
+    "Sabiendo que forward consiste en una suma de pesos de caminos desde “start” a “H i =h i ” y backward consiste en la suma de pesos de caminos desde “H i =h i ” a “end. Backward es de suma importancia para poder tener una probabilidad mas exacta, analizando los estados siguientes y no únicamente los anteriores, es decir, con el paso Backward podemos saber como un estado lleva a observaciones futuras."
    ]
   },
   {
