--- a/l9.ipynb
+++ b/l9.ipynb
@@ -25,7 +25,11 @@
     "\n",
     "2. Investigue qué son los factorial HMM (Hidden Markov Models)\n",
     "Estos modelos combinan la estructura de transición de estados de los HMM con las representaciones distribuidas de los CVQ. Esto puede representarse de mejor forma en la siguiente figura:\n",
-    "![ Hidden Markov model & Factorial hidden Markov model](https://github.com/Kojimena/L9-IA/blob/main/mkd.png)\n",
+    "<div style=\"width:400px\">\n",
+    "\n",
+    "![ Hidden Markov model & Factorial hidden Markov model](mkd.png)\n",
+    "\n",
+    "</div>\n",
     "\n",
     "Cada modelo de Markov subyacente, tiene un estado específico y su propia matriz que determina las probabilidades de transición entre estados. Asimismo en los CVQ cada estado dentro de un modelo es exclusivo.\n",
     "\n",
@@ -41,10 +45,12 @@
     "\n",
     "Con estos dos pasos es posible calcular la probabilidad de que el modelo genere una secuencia de observaciones dada.\n",
     "\n",
+    "*Jurafsky, D., & Martin, J. H. (2024). Speech and Language Processing. Recuperado de https://web.stanford.edu/~jurafsky/slp3/A.pdf*\n",
+    "\n",
     "4. En el algoritmo de Forward Backward, por qué es necesario el paso de Backward (puede escribir ejemplos\n",
     "o casos para responder esta pregunta.\n",
     "\n",
-    "Sabiendo que forward consiste en una suma de pesos de caminos desde “start” a “H i =h i ” y backward consiste en la suma de pesos de caminos desde “H i =h i ” a “end. Backward es de suma importancia para poder tener una probabilidad mas exacta, analizando los estados siguientes y no únicamente los anteriores, es decir, con el paso Backward podemos saber como un estado lleva a observaciones futuras."
+    "Sabiendo que forward consiste en una suma de pesos de caminos desde “start” a “H i =h i ” y backward consiste en la suma de pesos de caminos desde “H i =h i ” a “end. Backward es de suma importancia para poder tener una probabilidad mas exacta, analizando los estados siguientes y no únicamente los anteriores. Con el paso Backward podemos saber como un estado lleva a observaciones futuras, haciendo que la probabilidad sea más precisa como se mencionó anteriormente y aportando un contexto futuro a cada estado. *(Suriano.A, 2024)*"
    ]
   },
   {
